# chessboard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml  tsan
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: minimax.rs  negamax.rs  search.rs  ttd.rs  ttm.rs
chess/: Cargo.toml
chess/src/: color.rs  fen.rs  file.rs  lib.rs  move.rs  outcome.rs  piece.rs  position.rs  promotion.rs  rank.rs  role.rs  square.rs
eval/: Cargo.toml
eval/src/: end.rs  lib.rs  mid.rs
lib/: chess.rs  engine.rs  eval.rs  lib.rs  nnue.rs  search.rs  transposition.rs  uci.rs  util.rs
lib/chess/: bitboard.rs  board.rs  castles.rs  color.rs  fen.rs  file.rs  magic.rs  mirror.rs  move.rs  outcome.rs  perspective.rs  pgn.rs  piece.rs  position.rs  promotion.rs  rank.rs  role.rs  san.rs  square.rs  zobrist.rs
lib/engine/: ai.rs
lib/eval/: end.rs  materialist.rs  mid.rs  pesto.rs  pst.rs  random.rs  value.rs
lib/nnue/: accumulator.rs  affine.rs  crelu.rs  damp.rs  evaluator.rs  fallthrough.rs  feature.rs  hidden.rs  input.rs  layer.rs  material.rs  nn.rs  output.rs  passthrough.rs  positional.rs  psqt.rs  transformer.rs  value.rs  vector.rs
lib/search/: continuation.rs  control.rs  depth.rs  draft.rs  driver.rs  engine.rs  gravity.rs  history.rs  killers.rs  limits.rs  line.rs  metrics.rs  options.rs  ply.rs  pv.rs  pvs.rs  report.rs  score.rs  transposition.rs  value.rs
lib/search/transposition/: table.rs
lib/transposition/: iter.rs  table.rs
lib/util/: align.rs  assume.rs  binary.rs  bits.rs  bounds.rs  buffer.rs  build.rs  cache.rs  counter.rs  enum.rs  integer.rs  io.rs  register.rs  saturate.rs  saturating.rs  timer.rs  trigger.rs
nnue/: Cargo.toml
nnue/src/: affine.rs  chain.rs  crelu.rs  damp.rs  evaluator.rs  feature.rs  lib.rs  nn.rs  passthrough.rs  psqt.rs  transformer.rs
search/: Cargo.toml
search/src/: lib.rs  limits.rs  line.rs  options.rs  pv.rs  transposition.rs
src/: act.rs  action.rs  actor.rs  applet.rs  binary.rs  bitboard.rs  bits.rs  build.rs  cache.rs  chess.rs  cli.rs  color.rs  engine.rs  eval.rs  fen.rs  figure.rs  file.rs  foreign.rs  game.rs  io.rs  lib.rs  limits.rs  main.rs  metrics.rs  move.rs  outcome.rs  pgn.rs  piece.rs  placement.rs  play.rs  player.rs  position.rs  promotion.rs  pv.rs  random.rs  rank.rs  register.rs  remote.rs  report.rs  role.rs  (+9 more)
src/actor/: cli.rs  uci.rs
src/applet/: play.rs  search.rs  uci.rs
src/chess/: color.rs  fen.rs  file.rs  move.rs  outcome.rs  pgn.rs  piece.rs  position.rs  promotion.rs  rank.rs  role.rs  san.rs  square.rs
src/cli/: applet.rs
src/cli/applet/: analyze.rs  play.rs  uci.rs
src/cli/applet/play/: game.rs
src/engine/: ai.rs  heuristic.rs  materialist.rs  pesto.rs  pst.rs  random.rs  uci.rs
src/eval/: materialist.rs  pesto.rs  random.rs
src/io/: pipe.rs  process.rs  terminal.rs
src/play/: ai.rs  uci.rs
src/player/: ai.rs  cli.rs  uci.rs
src/remote/: process.rs  tcp.rs  terminal.rs
src/rules/: standard.rs
src/search/: limits.rs  metrics.rs  minimax.rs  negamax.rs  pv.rs  random.rs  transposition.rs
src/search/transposition/: table.rs
src/strategy/: minimax.rs  negamax.rs
src/transposition/: iter.rs  table.rs
src/util/: bits.rs  cache.rs  io.rs
src/util/io/: process.rs
tests/: perft.rs
util/: Cargo.toml
util/src/: binary.rs  bits.rs  bounds.rs  cache.rs  depth.rs  lib.rs  ply.rs  saturating.rs  score.rs  timer.rs  value.rs
workflows/: ci.yml
