[package]
name = "chessboard"
version = "0.1.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"
description = "A chess engine"
repository = "https://github.com/brunocodutra/chessboard.git"
license = "GPL-3.0"
readme = "README.md"
keywords = ["chess"]

[dependencies]
arrayvec = { version = "0.7.3", default-features = false, features = ["std"] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
cozy-chess = { version = "0.3.3", default-features = false, features = ["std"] }
ctor = { version = "0.2.8", default-features = false }
derive_more = { version = "1.0.0-beta.6", default-features = false, features = [
    "add",
    "add_assign",
    "constructor",
    "debug",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "into_iterator",
    "mul",
    "mul_assign",
    "not",
] }
num-traits = { version = "0.2.19", default-features = false, features = ["std"] }
rayon = { version = "1.10.0", default-features = false }
ruzstd = { version = "0.6.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["rayon"] }
proptest = { version = "1.4.0", default-features = false, features = ["std"] }
test-strategy = { version = "0.3.1", default-features = false }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
strip = false

[lib]
name = "lib"
path = "lib/lib.rs"
bench = false

[[bin]]
name = "cli"
path = "bin/main.rs"
bench = false

[[bench]]
name = "search"
harness = false
