[package]
name = "cinder"
version = "0.1.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"
description = "A chess engine"
repository = "https://github.com/brunocodutra/cinder.git"
license = "GPL-3.0"
readme = "README.md"
keywords = ["chess"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, features = ["std"] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
ctor = { version = "0.2.9", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = [
    "add",
    "add_assign",
    "constructor",
    "debug",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "into_iterator",
    "mul",
    "mul_assign",
    "not",
] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "executor",
    "std",
] }
rand = { version = "0.8.5", default-features = false, features = ["std", "min_const_gen"] }
rand_pcg = { version = "0.3.1", default-features = false }
rayon = { version = "1.10.0", default-features = false }
ruzstd = { version = "0.8.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["rayon"] }
criterion-macro = { version = "0.4.0", default-features = false }
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
test-strategy = { version = "0.4.0", default-features = false }

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
strip = false

[lib]
name = "lib"
path = "lib/lib.rs"
bench = false

[[bin]]
name = "cinder"
path = "bin/main.rs"
bench = false

[[bench]]
name = "search"
