[package]
name = "chess"
version = "0.1.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"

[dependencies]
util = { path = "../util/" }

bitflags = { version = "2.3.3", default-features = false }
derive_more = { version = "0.99.16", default-features = false, features = ["display", "error"] }
proptest = { version = "1.2.0", default-features = false, features = ["std"] }
shakmaty = { version = "0.26.0", default-features = false, features = ["std"] }
test-strategy = { version = "0.3.0", default-features = false }
vampirc-uci = { version = "0.11.0", default-features = false }
