[package]
name = "nnue"
version = "0.1.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"

[dependencies]
chess = { path = "../chess/" }

num-traits = { version = "0.2.15", default-features = false, features = ["std"] }
proptest = { version = "1.2.0", default-features = false, features = ["std"] }
test-strategy = { version = "0.3.0", default-features = false }
