[package]
name = "search"
version = "0.1.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"

[dependencies]
chess = { path = "../chess/" }
nnue = { path = "../nnue/" }
util = { path = "../util/" }

arrayvec = { version = "0.7.3", default-features = false, features = ["std"] }
derive_more = { version = "0.99.16", default-features = false, features = [
    "add",
    "constructor",
    "deref",
    "display",
    "error",
    "from",
    "into_iterator",
    "not",
] }
humantime-serde = { version = "1.1.1", default-features = false }
proptest = { version = "1.2.0", default-features = false, features = ["std"] }
rayon = { version = "1.7.0", default-features = false }
ron = { version = "0.8.0", default-features = false }
serde = { version = "1.0.167", default-features = false, features = ["derive", "std"] }
test-strategy = { version = "0.3.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.29.1", default-features = false, features = ["rt-multi-thread", "time"] }
