[package]
name = "util"
version = "0.1.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"

[dependencies]
atomic = { version = "0.5.3", default-features = false, features = ["std"] }
derive_more = { version = "0.99.16", default-features = false, features = ["display", "error"] }
num-traits = { version = "0.2.15", default-features = false, features = ["std"] }
proptest = { version = "1.2.0", default-features = false, features = ["std"] }
serde = { version = "1.0.171", default-features = false, features = ["derive", "std"] }
test-strategy = { version = "0.3.0", default-features = false }

[dev-dependencies]
rayon = { version = "1.7.0", default-features = false }
ron = { version = "0.8.0", default-features = false }
